fix - bug where academic achievements were not showing in template

--- a/src/styles/TemplateSection.css
+++ b/src/styles/TemplateSection.css
@@ -52,7 +52,7 @@
   grid-column: span 2;
 }
 
-.template-section li *:first-child {
+.template-section li div:first-of-type {
   font-weight: 700;
 }
 
